# simple-gateway

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  README.md  alembic.ini  buildfixer-0.1.dev0-py3-none-any.whl  ddos.sh  example.py  justfile  ploomber-cloud.json  pyproject.toml  supervisord.conf
api/src/: server.py  settings.py
api/src/api/routes/: admin.py  users.py
api/src/core/ploomber/: client.py
api/src/core/utils/: cache.py
api/src/database/: base.py
api/src/database/migrations/: README  env.py
api/src/database/models/: __init__.py  base.py  gateway_config.py
api/src/schema/: utils.py
api/src/services/auth/: middleware.py
api/src/services/cors/: middleware.py
api/src/services/gateway/: config_service.py  middleware.py
api/src/services/gateway/rules/: asbtract.py  rate_limiter.py  url_rewrite.py
api/src/services/logging/: discord.py  logging.py  middleware.py  telemetry.py
api/src/services/proxy/: service.py
api/src/services/rate_limiter/: middleware.py
api/src/services/request_tracking/: middleware.py
api/src/services/storage/: Redis.py
api/src/types/: forwarding_rules.py  request_tracking.py
api/tests/: conftest.py
api/tests/api/: conftest.py  mock_proxy_api.py  test_profile.py  test_proxy_integration.py
api/tests/api/gateway/: test_proxy.py  test_rate_limiter.py
api/tests/api/routes/: test_admin.py  test_users.py
app/: .env.example.dev  Dockerfile  README.md  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.js
app/src/: App.css  App.tsx  index.css  settings.ts
(+46 files in other folders)
